--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": "^7.1",
         "consistence/coding-standard": "^3.7",
+        "jakub-onderka/php-parallel-lint": "^1.0",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "extra": {
