--- a/skeletons/.editorconfig
+++ b/skeletons/.editorconfig
@@ -14,7 +14,7 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,js,json,css,scss,feature,eslintrc}]
+[*.{yml,js,json,css,scss,feature,eslintrc,vue}]
 indent_size = 2
 
 [composer.json]
