--- a/definitions/javascript/packages/silverstripe-eslint-vue/package.json
+++ b/definitions/javascript/packages/silverstripe-eslint-vue/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "silverstripe-eslint-vue",
+    "name": "@silverstripe/silverstripe-eslint-vue",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Hans Jakob Emmel",
@@ -7,8 +7,7 @@
     "dependencies": {
         "eslint": "^6.7.2",
         "eslint-plugin-import": "^2.19.1",
-        "eslint-plugin-vue": "^6.0.1",
-        "silverstripe-eslint-base": "^1.0.0"
+        "eslint-plugin-vue": "^6.0.1"
     },
     "scripts": {
         "test": "tape tests/*.js"
