--- a/definitions/javascript/package.json
+++ b/definitions/javascript/package.json
@@ -2,7 +2,8 @@
     "name": "root",
     "private": true,
     "scripts": {
-        "test": "lerna run test --"
+        "test": "lerna run test --",
+        "release": "lerna publish"
     },
     "workspaces": [
         "packages/*"
