--- a/definitions/javascript/packages/eslint-config-base/package.json
+++ b/definitions/javascript/packages/eslint-config-base/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@silverstripe/eslint-config-base",
-    "version": "1.0.1-alpha.0",
+    "version": "1.0.1",
     "description": "Base eslint configuration",
     "main": "index.js",
     "author": "Hans Jakob Emmel",
@@ -8,17 +8,16 @@
     "scripts": {
         "test": "tape tests/*.js"
     },
-    "peerDependencies": {
-        "eslint": ">=6",
-        "eslint-config-airbnb-base": ">=14",
-        "eslint-plugin-import": ">=2"
-    },
     "dependencies": {
-        "eslint": "^6.7.2",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-plugin-import": "^2.19.1"
+        "eslint-config-airbnb-base": "^14.0.0"
     },
     "devDependencies": {
+        "eslint": "^6.7.2",
+        "eslint-plugin-import": "^2.19.1",
         "tape": "^4.11.0"
+    },
+    "peerDependencies": {
+        "eslint": "^6.0.0",
+        "eslint-plugin-import": "^2.0.0"
     }
 }
