--- a/definitions/javascript/packages/eslint-config-vue/package.json
+++ b/definitions/javascript/packages/eslint-config-vue/package.json
@@ -1,20 +1,19 @@
 {
     "name": "@silverstripe/eslint-config-vue",
-    "version": "1.0.1-alpha.0",
+    "version": "1.0.1",
     "main": "index.js",
     "author": "Hans Jakob Emmel",
     "license": "MIT",
     "peerDependencies": {
-        "eslint": ">=6",
-        "eslint-plugin-import": ">=2",
-        "eslint-plugin-vue": ">=6"
+        "eslint": "^6.0.0",
+        "eslint-plugin-import": "^2.0.0"
     },
     "dependencies": {
-        "eslint": "^6.7.2",
-        "eslint-plugin-import": "^2.19.1",
+        "@silverstripe/eslint-config-base": "^1.0.1",
         "eslint-plugin-vue": "^6.0.1"
     },
     "scripts": {
+        "eslint": "^6.7.2",
         "test": "tape tests/*.js"
     },
     "devDependencies": {
