--- a/definitions/javascript/lerna.json
+++ b/definitions/javascript/lerna.json
@@ -1,8 +1,21 @@
 {
-  "npmClient": "yarn",
-  "useWorkspaces": true,
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+    "npmClient": "yarn",
+    "useWorkspaces": true,
+    "packages": [
+        "packages/*"
+    ],
+    "command": {
+        "version": {
+            "exact": true
+        },
+        "publish": {
+            "npmClient": "npm",
+            "allowBranch": [
+                "master",
+                "canary"
+            ],
+            "registry": "https://registry.npmjs.org/"
+        }
+    },
+    "version": "independent"
 }
