--- a/definitions/javascript/packages/eslint-config-vue/package.json
+++ b/definitions/javascript/packages/eslint-config-vue/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@silverstripe/eslint-config-vue",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "main": "index.js",
     "author": "Hans Jakob Emmel",
     "license": "MIT",
@@ -9,7 +9,7 @@
         "eslint-plugin-import": "^2.0.0"
     },
     "dependencies": {
-        "@silverstripe/eslint-config-base": "^1.0.1",
+        "@silverstripe/eslint-config-base": "1.0.2",
         "eslint-plugin-vue": "^6.0.1"
     },
     "scripts": {
