publish scoped packages

--- a/definitions/javascript/packages/eslint-config-base/package.json
+++ b/definitions/javascript/packages/eslint-config-base/package.json
@@ -5,6 +5,9 @@
     "main": "index.js",
     "author": "Hans Jakob Emmel",
     "license": "MIT",
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "test": "tape tests/*.js"
     },
@@ -19,5 +22,6 @@
     "peerDependencies": {
         "eslint": "^6.0.0",
         "eslint-plugin-import": "^2.0.0"
-    }
+    },
+    "gitHead": "3597cd847d1d8549e07b06f525877389ab15a063"
 }
